# LoRAIro

./: .coverage  .coveragerc  .env  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NEXT_SESSION.md  README.md  TEST_REPORT.md  alembic.ini  analyze_tests.py  bdd_quality_findings.md  call_memory.json  caption_duplicates.csv  caption_like_tags.csv  cleanup_report.md  coverage.json  coverage_cli.json  coverage_genai.json  enhanced_rembg_autocrop_test.py  generate_project_summary.py  headers.txt  init.json  install.bat  integration_gui_quality_findings.md  lorairo.code-workspace  lorairo_project_summary.txt  mainprompt.md  processing.toml  publish_docs.bat  pyproject.toml  pyrightconfig.json  pytest.ini  (+10 more)
.brv/: config.json
.brv/ace/: playbook.json
.brv/blobs/: agent.db-shm  agent.db-wal  storage.db-shm
.brv/context-tree/: .snapshot.json
.claude/: settings.json  settings.local.json
.claude/agents/: build-error-resolver.md  code-formatter.md  code-reviewer.md  db-schema-reviewer.md  investigation-delegator.md  investigation.md  library-research-specialist.md  library-research.md  query-analyzer.md  security-reviewer.md  solutions-migrator.md  solutions.md  test-runner.md
.claude/commands/: build-fix.md  check-existing.md  code-review.md  implement.md  investigate.md  lib-research.md  plan.md  planning.md  save-session.md  solutions.md  sync-plan.md  test.md  verify.md
.claude/hooks/: bash_grep_checker.py  block_grep.py  hook_assistant_response_checker.py  hook_git_grep_enforcement.py  hook_git_grep_enforcement.sh  hook_plan_read_redirect.py  hook_post_plan_mode.py  hook_pre_commands.py  hook_pre_commands.sh  hook_pre_edit_worktree.py  hook_pre_pr_submodule_check.py  hook_response_monitor.py  hook_session_end.py  hook_session_start.py  hook_stop_words.py  hook_stop_words.sh  hook_teammate_monitor.py  hook_worktree_create.py  read_mcp_memorys.py
.claude/rules/: coding-style.md  dependency-management.md  git-workflow.md  logging.md  parallel-execution.md  planning-memory.md  security.md  testing.md
.codex/: config.toml  hooks.json
.codex/agents/: build-error-resolver.toml  code-formatter.toml  code-reviewer.toml  db-schema-reviewer.toml  investigation.toml  query-analyzer.toml  security-reviewer.toml  solutions.toml  test-runner.toml
.codex/hooks/: hook_pre_commands.py  hook_teammate_monitor.py  hook_worktree_create.py
.cursor/rules/: agent-context-engineering.mdc  coding-rules.mdc  debug.mdc  doc-lookup-rules.mdc  encapsulation-rules.mdc  error-documentation.mdc  implement.mdc  lessons-learned.mdc  loggimg-riles.mdc  logging-riles.mdc  logging-rules.mdc  mcp-usage-rules.mdc  memory.mdc  plan.mdc  project-documentation-rules.mdc  rules.mdc
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  postCreateCommand.sh  xvfb_init.sh
.github/ISSUE_TEMPLATE/: bug_report.md  idea.md  refactor.md  release-checklist.md
.github/workflows/: agent-pr-maintainer.yml  ci.yml  harness-validation.yml
.roo/: .roorules-architect  .roorules-ask  .roorules-code  .roorules-debug  .roorules-test  README.md  mcp.json.example
.roo/commands/: implement.md  plan.md  solutions.md
.roo/rules/: memory.mdc  rules.mdc
.roo/rules-architect/: plan.mdc
.roo/rules-code/: implement.mdc
.roo/rules-debug/: debug.mdc
.serena/: project.yml  serena_config.yml
.serena/memories/: README.md  active-development-tasks.md  agent1_actual_test_structure.md  agent1_analysis_summary.md  agent1_conftest_analysis.md  agent1_redundancy_findings.json  agent2_new_test_architecture.md  agent3_quality_findings_manual.md  annotation_control_widget_removal_2025_11_21.md  annotation_layer_architecture_reorganization_2025_11_15.md  annotation_layer_critical_fix_2025_11_16.md  annotation_layer_refactor_quality_assurance_2025_11_21.md  annotation_worker_code_collapse_incident_2026_02_09.md  annotator_config_management_design_2025_11_15.md  annotator_cuda_device_handling_fix_plan_2025_12_01.md  annotator_lib_lessons_learned.md  annotator_lib_memory_reorganization_design_2025_10_30.md  annotator_result_save_critical_fix_2025_12_01.md  annotator_result_save_fix_plan_v2_2025_12_01.md  (+435 more)
Trash/: gapi.py  poetryで作ったTOML
config/: lorairo.toml  lorairo.toml.template
docs/: DEPRECATIONS.md  architecture.md  cli-rating-preflight.md  cli.md  conftest_template.py  design_decisions.md  development-workflow.md  documentation-maintenance.md  genai_tag_db_tools_api_plan.md  integrations.md  lessons-learned.md  migration_roadmap.md  new_test_architecture.md  product_requirement_docs.md  provider-batch-api.md  release-checklist.md  services.md  technical.md  testing.md  メモ.md
jsonl/: batch_LMWPlPy8lwrdiH1CGsGvKPBi_output.jsonl  batch_OGVpSovcfdKBGG1NMxvq0Y1v_output.jsonl  batch_PDJqKSwgW4B85BkOXHKwWqOV_output.jsonl  batch_QbgvcSO11TsoRPDmDQnWOjg6_output.jsonl  batch_gU0KxtttgS9lci1by5FF56oU_output.jsonl
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: __init__.py  add_pytest_import.py  add_test_markers.py  agent_pr_state.py  check_adr_drift.py  check_agent_forbidden_changes.py  check_codex_review_gate.py  cleanup_merged_worktrees.py  component_test.py  convert_ui_to_py.py  filter_caption_like_tags.py  fix_lorairo_output_paths.py  functionality_check.py  generate_512px_images.py  generate_cli_docs.py  generate_ui.py  install_agent_skills.py  migrate_database_paths.py  migrate_legacy_projects.py  migrate_to_waituntil.py  mock_main_window.py  mock_right_panel.py  phase2_ui_responsive_conversion.py  repair_tag_normalization.py  run_gui.sh  run_runtime_webapi_tests.py  setup.sh  test_autocrop_effectiveness.py  test_new_gui.py  validate_docs.py  validate_harness.py
src/: ImageEditWidget.py  gui.py  main.py
tasks/: README.md  active_context.md  implementation_status_report.md  session_2025-07-12_image-processor-refactor-and-hooks.md  tasks_plan.md
tests/: conftest.py
tools/: check_ai_annotator.py  check_annotate_model.py  check_db_schema.py  check_models.py
(+1517 files in other folders)
