[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lorairo"
version = "0.0.8"
description = "AIタグ付LoRA画像データセット準備ツール"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "NEXTAltair" }]
keywords = ["lora", "dataset", "ai", "image-processing"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    # 画像処理系
    "Pillow",
    "opencv-python",
    "numpy",
    "scipy",
    "torch",
    "ImageHash",
    "spandrel",
    # AI系
    "openai>=0.10.0",
    # データ処理系
    "toml>=0.10.2",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "huggingface_hub[hf_xet]",
    # CLI系
    "typer>=0.12.0",
    "rich>=13.0.0",
    # GUI系
    "PySide6>=6.8.0.2",
    "superqt>=0.6.7",
    # Local packages (managed by uv.sources)
    "genai-tag-db-tools",
    "image-annotator-lib",
    "rembg>=2.0.67",
    "pymatting>=1.1.15",
    "torchvision>=0.25.0",
    # 2026-05-12: PyPI で `mistralai` パッケージが quarantined され、`pydantic-ai`
    # 1.93.0 までに含まれていた `mistral` extra (= `pydantic-ai-slim[mistral]` →
    # `mistralai>=1.x` 依存) が universal lock の解決を不能にした。`pydantic-ai`
    # 1.94.0+ では `mistral` extra が削除済みのため、最低バージョンを 1.94.0 に
    # pin して回避する。LoRAIro / image-annotator-lib は Mistral プロバイダーを
    # 使わない (実装コードに該当プロバイダー参照ゼロ) ため機能影響なし。
    "pydantic-ai>=1.94.0",
]


[project.scripts]
lorairo = "lorairo.main:main"
lorairo-cli = "lorairo.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/NEXTAltair/lorairo"
"Bug Tracker" = "https://github.com/NEXTAltair/lorairo/issues"

[tool.uv]
# image-annotator-lib#59: Linux + CUDA driver 不在 + triton 存在で
# `import image_annotator_lib` 経由 torch._dynamo 経路が SIGSEGV する。
# torch が transitive で要求する triton を resolution から完全除外することで
# どの OS でも triton が install されないようにする。
# - Windows / macOS は元から triton wheel が無く、挙動不変
# - Linux は本除外で triton 不在となり SIGSEGV 経路 (has_triton_package=False) を回避
# LoRAIro は torch.compile / torch._dynamo を使っていないため機能影響なし
# (本 PR の Phase 1 で grep 確認済)。
exclude-dependencies = ["triton"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
fix = true
line-length = 108
target-version = "py312"
exclude = [
    "*/gui/designer/*", # Qtデザイナが生成するコード
    "*/__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

ignore = [
    "RUF001",
    "RUF003",
    "RUF002", # カタカナの `ノ` でのメッセージを無視
    "E501",   # Line too long (line-lengthで制御)
    "F401",   # Unused imports (IDEでの管理が困難なため)
    "B008",   # typer.Option/Argument in function defaults (typer標準パターン)
]

[tool.ruff.lint.per-file-ignores]
# tests/conftest.py はモックを先に設定してから lorairo モジュールをインポートする必要があるため
# モジュール先頭以外の import は意図的
"tests/conftest.py" = ["E402"]
"*/database/migrations/versions/*" = ["C901"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
exclude = ['^src/lorairo/gui/designer/', '^tests/']

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "local_packages/image-annotator-lib/src",
    "local_packages/genai-tag-db-tools/src",
] # テストするコードのディレクトリ
# pytest セッション境界は LoRAIro 本体テストのみに固定する (Issue #247, ADR 0024)。
# local_packages/*/tests は各 package の root で独立した pytest セッションで実行する:
#   cd local_packages/image-annotator-lib && uv run pytest
#   cd local_packages/genai-tag-db-tools  && uv run pytest
# (詳細は Makefile の test-iam-lib / test-genai-tag / test-all 参照)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-s",
    "-ra",
    "--tb=short",
    "--showlocals",
]
qt_api = "pyside6"
norecursedirs = [
    ".venv",
    ".venv_*",
    "*.egg",
    "build",
    "dist",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "fast_integration: Fast integration tests",
    "gui: GUIアクセスを含むが表示を必要としないテスト",
    "gui_show: 実際のウィンドウ表示や描画を伴うテスト",
    "slow: Tests that take more time",
    "webapi: Tests related to Web API based annotators",
    "scorer: Tests specific to scorer models",
    "tagger: Tests specific to tagger models",
    "model_factory: Tests for the model factory (ModelLoad)",
    "fast: Fast unit tests (no external dependencies, <30s)",
    "standard: Standard unit tests (light mocking, <3min)",
    "real_api: Real API tests (for validation)",
    "bdd: BDD scenarios (pytest-bdd)",
    "bdd_core: Core BDD scenarios (SimplifiedAgentWrapper, Factory)",
    "api_model_discovery: API model discovery tests",
    "cli: CLI tests",
]

# VS Code settings moved to lorairo.code-workspace


[tool.coverage.run]
# coverage 計測対象は LoRAIro 本体のみ。
# local_packages は別 pytest セッション (別 CI job) で独立 coverage を計測する
# (ADR 0024: pytest セッション境界 = coverage 境界 = package 境界)。
# - image-annotator-lib は tests/conftest.py でモジュールレベルにモック化されているため
#   本体セッションでは 0% となり計測対象外。lib 自身の CI job で計測する。
# - genai-tag-db-tools も別 job で独立 coverage 計測 (ADR 0016 を ADR 0024 が更新)。
source = ["src"]
omit = [
    "*/shibokensupport/*",
    "*/site-packages/*",
    "*/gui/designer/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 75 # カバレッジが75%未満なら失敗
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",                  # ... (Ellipsis)
]


[tool.hatch.build.targets.wheel]
packages = ["src/lorairo"] # パッケージディレクトリ指定


[tool.uv.sources]
genai-tag-db-tools = { path = "local_packages/genai-tag-db-tools", editable = true }
image-annotator-lib = { path = "local_packages/image-annotator-lib", editable = true }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "pytest-bdd",
    "pytest-timeout>=2.4.0",
    "types-requests",
    "pytest-bdd>=8.1.0",
    "types-requests>=2.32.0",
    "types-Pillow",
    "types-toml",
    "psutil",
    "matplotlib",
    "radon>=6.0.1",
    "lizard>=1.21.0",
    "pre-commit>=4.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true
